<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="100">
    </item>

    <item
        android:id="@+id/seat"
        android:title="@string/available_seats"
        android:icon="@drawable/ic_seat_black_24dp"
        android:orderInCategory="100">
    </item>

    <item
        android:id="@+id/toggle"
        android:title="On or Off"
        android:icon="@drawable/ic_person_on_off_black_24dp"
        android:orderInCategory="100">
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="100">
    </item>

</menu>