<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="20sp"
        android:alpha="0.78"
        android:onClick="selectImage"
        android:scaleType="centerInside"
        android:src="@drawable/my_bus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/choose_image"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="10sp"
        android:alpha="0.78"
        android:onClick="selectImage"
        android:scaleType="centerInside"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bus_type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_image">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/bus_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_bus_type"
            android:drawablePadding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:hint="@string/bus_type"
            android:inputType="text"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bus_number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bus_type_container">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/bus_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_bus_number"
            android:drawablePadding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:hint="@string/bus_number"
            android:inputType="text"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </android.support.design.widget.TextInputLayout>

    <!--Container and EditText  for number of seats-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/seat_number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bus_number_container">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/seat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_seat_black_24dp"
            android:drawablePadding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:hint="@string/number_seat"
            android:inputType="text"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </android.support.design.widget.TextInputLayout>

    <!--Container and EditText  for capacity-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/capacity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seat_number_container">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_capacity"
            android:drawablePadding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:hint="@string/capacity"
            android:inputType="text"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </android.support.design.widget.TextInputLayout>

    <!--Container and EditText  for departure time-->
    <android.support.v7.widget.CardView
        android:id="@+id/dpt_time_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="36sp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="selectTime"
        app:cardBackgroundColor="@color/white_greyish"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capacity_container">
        <io.maxbusbooker.widget.BaselineGridTextView
            android:id="@+id/dpt_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableStart="@drawable/ic_departure_time"
            android:padding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:text="@string/departure_time"
            android:textSize="16sp"
            android:textColor="@color/colorSecondary"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/light_mobile_button_background"
            android:onClick="login"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/pure_white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dark_mobile_button_background"
            android:onClick="register"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@color/pure_white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>